--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Parses the play-by-play data into possession data that can be used to calculated RAPM (Regularized Adjusted Plus Minus).
+Parses the play-by-play data from the nba.com API into possession data that can be used to calculated RAPM (Regularized Adjusted Plus Minus).
 RAPM is a ridge regression with the points on a play as the regressand and dummy variables for each player as the regressors.
 
